# berkerja

./: .env.example  .env.local.example  .gitignore  README.md  package-lock.json  package.json  pyproject.toml  tailwind.config.ts  tsconfig.tsbuildinfo  vitest.config.ts
backend/agents/: glints_agent.py  opencode_llm.py
docs/superpowers/plans/: 2026-04-11-berkerja-auth-implementation.md  2026-04-11-berkerja-implementation.md  2026-04-12-browser-use-scraper-implementation.md  2026-04-12-opencode-browser-use-adapter-implementation.md  2026-04-12-puppeteer-scraper-implementation.md
docs/superpowers/specs/: 2026-04-11-berkerja-auth-design.md  2026-04-11-berkerja-design.md  2026-04-12-browser-use-scraper-design.md  2026-04-12-puppeteer-scraper-design.md
scripts/: glints-scraper.sh  jobstreet-scraper.sh  linkedin-scraper.sh
scripts/scraper/: ai-validator.ts  browser-use-runner.ts  debug-selectors.ts  puppeteer-runner.ts  selector-loader.ts  test-dom.ts
scripts/scraper/selectors/: config.ts  user-updated.json
src/: vitest-setup.ts
src/app/: globals.css  layout.tsx  page.tsx
src/app/(dashboard)/: layout.test.tsx  layout.tsx
src/config/: supabase.ts
src/hooks/: use-scraper-sse.ts
src/job_automation/: cli.py  config.py  models.py
src/stores/: auth-store.test.ts  auth-store.ts  user-context.ts
src/types/: cv.ts  job.ts  keyword.ts
src/utils/: format.ts
supabase/migrations/: 001_initial_schema.sql
tests/: conftest.py  test_cli.py  test_config.py  test_glints_scraper.py  test_json_writer.py  test_models.py  test_opencode_llm.py
(+49 files in other folders)
